to fix the alignment to the reference image

--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ html {
   box-sizing: border-box;
   font-family: Merriweather, serif;
   line-height: 1.5;
-  margin: 1rem 0 1rem;
+  margin: 1rem 0;
   padding: 0;
 }
 
@@ -17,7 +17,7 @@ body {
 header {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 2.5rem 1fr 3rem 3rem 0;
+  grid-template-rows: 3rem 1fr 3rem 3rem 0;
   gap: .75rem;
 }
 
